Fix app layout positioning
Use flex rather than fixed positions to avoid covering elements

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,8 +1,5 @@
 .c-navigation-tray {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: relative;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
